--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<!--<nav>-->
+<!--&lt;!&ndash;  <a routerLink="/">Cal</a>&ndash;&gt;-->
+<!--  <a [ routerLink ]="['/cal2']">Cal2</a>-->
+<!--</nav>-->
+
 <app-hi></app-hi>
-<!-- <router-outlet></router-outlet> -->
-<app-cal2></app-cal2>
+
+<app-cal></app-cal>
+<!--<router-outlet></router-outlet>-->
