--- a/src/app/cal/cal.component.html
+++ b/src/app/cal/cal.component.html
@@ -1,9 +1,12 @@
-
-<div data-ng-app="" data-ng-init="quantity=1;price=5">
-
-  <h2>Cost Calculator</h2>
-
-  Quantity: <input type="number" ng-model="quantity">
-  Price: <input type="number" ng-model="price">
-
-  <!-- <p><b>Total in dollar:</b> {{quantity * price}}</p> -->
+<div class="box">
+  <input type="number" placeholder="A:" class="mr-2" [(ngModel)]="a">
+  <select name="" id="" class="mr-2" (change)=Select($event)>
+    <option value="+">+</option>
+    <option value="-">-</option>
+    <option value="x">X</option>
+    <option value="/">/</option>
+  </select>
+  <input type="number" placeholder="B:" class="mr-2" [(ngModel)]="b">
+  <button class="btn btn-success mr-2" (click)="Action()">=</button>
+  <input type="text" placeholder="KQ" class="mr-2" [value]="kq">
+</div>
