--- a/src/app/hi/hi.component.css
+++ b/src/app/hi/hi.component.css
@@ -421,3 +421,19 @@ table {
 .table-responsive > .table-bordered {
   border: 0;
 }
+p{
+  font-family: Lato;
+}
+.box{
+  width: 100px;
+  height: 100px;
+  padding: 20px 40px;
+  margin: 10px;
+  border: 2px solid black;
+}
+.red-border{
+  border: 2px solid red;
+}
+.yellow-bg{
+  background: yellow;
+}
